err/django-html-field.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_html_field-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/html_field'...
Listing './lib/python3.5/site-packages/html_field/db'...
Listing './lib/python3.5/site-packages/html_field/db/models'...
Compiling './lib/python3.5/site-packages/html_field/db/models/fields.py'...
***   File "./lib/python3.5/site-packages/html_field/db/models/fields.py", line 43
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/html_field/forms'...
Compiling './lib/python3.5/site-packages/html_field/forms/fields.py'...
***   File "./lib/python3.5/site-packages/html_field/forms/fields.py", line 28
    except DisallowedTagError, e:
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/html_field/html_cleaner.py'...
***   File "./lib/python3.5/site-packages/html_field/html_cleaner.py", line 158
    print s.clean('<p>hello! i am a <a href="here.html" onClick="javascript:doThat();">link</a>, and <em>you</em> are a <h1>title</h1></p>')
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/html_field/tests'...
Compiling './lib/python3.5/site-packages/html_field/validators.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (validators.py, line 7)
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
